# Sales-Data-Analysis-With-PySpark

./: README.md  pyproject.toml
data/: customers_data.csv  products_data.csv  sales_data.csv  salespeople_data.csv  stores_data.csv
data/results/customer_analysis/: .part-00000-32d1325b-9362-448d-bd91-c291e31ad63a-c000.csv.crc  part-00000-32d1325b-9362-448d-bd91-c291e31ad63a-c000.csv
data/results/product_performance/: .part-00000-20ac0b04-136b-4657-aa7e-c06421074e90-c000.csv.crc  part-00000-20ac0b04-136b-4657-aa7e-c06421074e90-c000.csv
data/results/salespeople_performance/: .part-00000-e29afc47-41ee-4c27-a8b7-c535279666b5-c000.csv.crc  part-00000-e29afc47-41ee-4c27-a8b7-c535279666b5-c000.csv
data/results/store_analysis/: .part-00000-ac918555-9cc0-48fc-9880-7dbac26ade18-c000.csv.crc  part-00000-ac918555-9cc0-48fc-9880-7dbac26ade18-c000.csv
output/hello_world/: .part-00000-2c65ebaa-a8f8-4b36-a3c7-4f312f439469-c000.csv.crc  part-00000-2c65ebaa-a8f8-4b36-a3c7-4f312f439469-c000.csv
output/sales_data/: .part-00000-c4253fe9-7ac8-4e28-8fd4-a5082f4ad822-c000.csv.crc  part-00000-c4253fe9-7ac8-4e28-8fd4-a5082f4ad822-c000.csv
output/total_revenue_by_salesperson/: .part-00000-82c5bc0a-b0b3-4945-a222-7cdef63d3620-c000.csv.crc  part-00000-82c5bc0a-b0b3-4945-a222-7cdef63d3620-c000.csv
output/total_revenue_by_store/: .part-00000-e3a4840d-d1dc-47cb-bcaa-47c68f55fb15-c000.csv.crc  part-00000-e3a4840d-d1dc-47cb-bcaa-47c68f55fb15-c000.csv
src/: app.py  generate_data.py  hello_world.py  pipeline.py
src/faker/: data_clean.py  data_generator.py  main.py
